assets/css/main.css
:root {
  --accent1: #ef476f;
  --accent2: #ffd166;
  --accent3: #06d6a0;
  --accent4: #118ab2;

  --true-background: #131316;
  --transparent-background: #131316bb;
  --block-background: hsl(223, 20%, 12%);
  --text: #C9CAC7;
  --headers: #F7F7F2;
}

html {
  margin: auto;
  display: table;
  background-color: var(--true-background);
}

body {
  background-color: transparent;
  display: table-cell;
  vertical-align: middle;
  color: var(--text);
  font-family: sans-serif;
  line-height: 1.5;
}

header {
  margin: 1.5rem 0;
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  column-gap: 1.5rem;

  & h1 {
    font-size: max(min(8.5vw, 42px), 28px);
  }

  & svg, img {
    display: inline-block;
    max-width: max(min(12.5vw, 64px), 42px);
    max-height: max(min(12.5vw, 64px), 42px);
    vertical-align: text-bottom;
    margin-right: 0.5rem;
  }

  & nav {
    text-align: end;
    & ul {
      padding-left: 0;
    }
    & li {
      list-style: none;
      display: inline-block;
      font-size: 20px;
      margin-left: 0.5rem;
    }
  }

  & ul li:hover {
    transition: color 0.5s ease-out;
  }
  & ul li:hover:nth-child(1) {
    color: var(--accent1);
  }
  & ul li:hover:nth-child(2) {
    color: var(--accent2);
  }
  & ul li:hover:nth-child(3) {
    color: var(--accent3);
  }
  & ul li:hover:nth-child(4) {
    color: var(--accent4);
  }

  & nav {
    float: right;
    & .icon {
      display: inline-block;
      width: 24px;
      aspect-ratio: 1;
      vertical-align: text-bottom;
    }
  }
}

footer {
  margin-top: 1rem;
  text-align: center;
}

a {
  font-weight: bold;
  text-decoration: none;
  color: inherit;
}

.tags-list ul {
  padding-left: 0;
  text-align: center;
}

.tags-list li {
  list-style: none;
  font-weight: normal;
  display: inline-block;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
  margin-bottom: 6px;
  background-color: hsl(222, 30%, 16%);
  border-radius: 100rem;
}

.tags-list li:hover {
  background-color: hsl(222, 30%, 24%);
}

div.content {
  display: flex;
  justify-content: space-between;

  & aside {
    min-width: min(320px, 50%);
    max-width: min(320px, 50%);
    margin-left: 1rem;

    & h4 {
      margin: 1rem 0 0.5rem 0;
    }

    & section {
      padding: 1.75rem;
      margin-bottom: 1rem;
      background-color: var(--block-background);

      & .icon {
        display: inline-block;
        width: 22px;
        aspect-ratio: 1;
        vertical-align: text-bottom;
      }
    }
  }

  & .image-and-article {
    flex: 1;

    & .image {
      margin-bottom: 1rem;
      position: relative;
      overflow: hidden;

      & #featured_image {
        width: 100%;
      }
    }

    & article {
      background-color: var(--block-background);
      padding: min(3rem, 8vw);
    }
  }
}

div.image:hover section.controls {
  bottom: 0;
}

.title {
  text-align: center;
  & h1 {
    font-size: xx-large;
  }
}

#sky-plot {
  padding: 0.75rem;
  & h3 {
    padding: auto 0 0 1rem;
  }
  & img {
    display: block;
    margin: 1rem auto 0 auto;
    width: 100%;
    max-width: 450px;
    aspect-ratio: 1;
    filter: contrast(90%) brightness(120%) grayscale(95%);
  }
}

aside, article, section {
  display: block;
}

h1, h2, h3, h4, h5 {
  color: var(--headers);
  margin: 0;
}

.definition-inner {
  visibility: hidden;
  width: fit-content;
  background-color: hsl(222, 30%, 16%);
  border: 2px solid hsl(222, 30%, 24%);
  color: var(--headers);
  text-align: center;
  border-radius: 6px;
  padding: 5px 10px;
  z-index: 1;
  opacity: 0;
  transition: opacity 0.3s;
}

.definition-outer {
  visibility: hidden;
  width: min(400px, 100vw);
  z-index: 1;
  position: absolute;
  top: -999px;
  left: -999px;
  display: flex;
  justify-content: center;
}

.term {
  cursor: help;
  border-bottom: 1px dotted var(--text);
}

.term:hover .definition-inner {
  visibility: visible;
  opacity: 1;
  cursor: auto;
  transition-duration: 0.25s;
}

ul.pagination {
  padding: 0;
  display: flex;
  justify-content: center;
  gap: 1rem;

  & li {
    display: inline-block;
    list-style: none;
    font-size: 20px;
    transition-duration: 0.25s;
  }
  & li.disabled {
    cursor: default;
    filter: brightness(40%);
  }
  & li.active {
    cursor: default;
    color: var(--accent2);
  }
  & li:not(.disabled):hover {
    color: var(--accent2);
  }
}

footer {
  margin-top: 2rem;
  margin-bottom: 2rem;
  & a {
    font-weight: normal;
  }
}

#search {
  cursor: pointer;
}

#gallery-grid {
  width: 100%;
  display: flex;
  flex-wrap: wrap;
}

.gallery-grid-item {
  width: calc(100%/3);
  min-width: calc(100%/3);
  animation: 0.75s ease-in-out 0s 1 slideInFromLeft;

  /* hack to get gaps working with masonry */
  /* TODO: replace with masonry gutter sizer */
  padding: 0.25rem;
  box-sizing: border-box;

  & .img-pad {
    position: relative;
    overflow: hidden;
  }

  & img {
    width: 100%;
    display: block;
  }

  & .overlay {
    line-height: 1;
    background-color: var(--transparent-background);

    position: absolute;
    transform: translateY(100%);
    transition: transform 0.25s ease-out;

    padding-bottom: 5px;
    /* slightly oversizing makes it look right on firefox*/
    width: calc(100% + 4px);
    bottom: 0px;
    left: -2px;
    text-align: center;
    font-size: 24px;

    & p {
      margin: 0.5rem;
    }

    & .description {
      font-size: 18px;
      font-weight: normal;
    }
  }
}

/* TODO: consider , .gallery-grid-item a:focus .overlay */
.gallery-grid-item .img-pad:hover .overlay {
  transform: translateY(0%);
}

@keyframes slideInFromLeft {
  0% {
    transform: translateX(-20%) translateY(-12.5%) scale(75%);
    opacity: 0;
  }
  100% {
    transform: translateX(0);
    opacity: 1;
  }
}

@media (min-width: 1350px) {
  body {
    min-width: min(95vw, 1450px);
    max-width: min(95vw, 1450px);
  }
}

@media (max-width: 1350px) {
  body {
    min-width: min(95vw, 1450px);
    max-width: 95vw;
  }
}

@media (max-width: 1000px) {
  .gallery-grid-item {
    width: 50%;
  }
  div.content {
    flex-direction: column;

    & article {
      padding: 1rem;
    }

    & aside {
      /* TODO: make a breakpoint where the aside sections are 2 per row */
      margin-left: 0rem;
      margin-top: 1rem;
      min-width: unset;
      max-width: unset;
      display: flex;
      flex-wrap: wrap;
      column-gap: 1rem;

      & section {
        box-sizing: border-box;
        min-width: 320px;
        width: calc(50% - 0.5rem);
        flex: 1;
      }
      & section:nth-child(1) {
        flex: 2;
      }
    }
  }
}

@media (max-width: 716px) {
  header {
    justify-content: space-evenly;
  }
}

@media (max-width: 525px) {
  .gallery-grid-item {
    width: 100%;
  }
}

